// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/Text Basic Text 1`] = `
<span
  className="sc-kHNMoK kAwbqC"
>
  basic text
</span>
`;

exports[`Storyshots Components/Text Emphase Text 1`] = `
<span
  className="sc-kHNMoK sc-bGqQkm kAwbqC lkpNrr"
>
  emphase text
</span>
`;

exports[`Storyshots Components/Text Larger Text 1`] = `
<span
  className="sc-kHNMoK sc-gYhigD kAwbqC bcwsBR"
>
  larger text
</span>
`;

exports[`Storyshots Components/Text Secondary Text 1`] = `
<span
  className="sc-kHNMoK sc-ksXhwv kAwbqC dskCSm"
>
  secondary text
</span>
`;

exports[`Storyshots Components/Text Smaller Text 1`] = `
<div
  style={
    Object {
      "width": "100px",
    }
  }
>
  <span
    className="sc-kHNMoK sc-cjHJEj kAwbqC fcfyql"
  >
    smaller text
  </span>
</div>
`;

exports[`Storyshots Components/Text Status Text 1`] = `
Array [
  <div>
    <span
      className="sc-kHNMoK sc-fxNNfJ kAwbqC jBLoDp"
    >
      healthy status text
    </span>
  </div>,
  <div>
    <span
      className="sc-kHNMoK sc-fxNNfJ kAwbqC cyCmEt"
    >
      warning status text
    </span>
  </div>,
  <div>
    <span
      className="sc-kHNMoK sc-fxNNfJ kAwbqC iYJyAz"
    >
      critical status text
    </span>
  </div>,
  <div>
    <span
      className="sc-kHNMoK sc-fxNNfJ kAwbqC hCUAzZ"
    >
      unknown status text
    </span>
  </div>,
]
`;
